Fix navitems jumping on page load

--- a/pk/static/css/_navigation.scss
+++ b/pk/static/css/_navigation.scss
@@ -60,6 +60,7 @@ $NAV_HEIGHT: 64px;
     text-shadow:
       0px 1px 0px rgba(255,255,255,0.4),
       0px -1px 0px rgba(0,0,0,0.6);
+    width: 35px;
     &:hover {
       animation: navglow 1s ease-in-out infinite alternate;
       color: #888;
